fix: Swagger and readme
